# rusthttp

./: Cargo.toml  PROPOSAL.md  README.md
.kiro/steering/: browser-profiles.md  coding-standards.md  project-background.md
crates/client/: Cargo.toml
crates/client/src/: cookie_jar.rs  header.rs  lib.rs
crates/client/tests/: integration.rs
crates/h2/: Cargo.toml
crates/h2/src/: codec.rs  connection.rs  frame.rs  hpack.rs  lib.rs  stream.rs
crates/h2/tests/: adversarial.rs  snapshot.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: error.rs  lib.rs  rotation.rs  tunnel.rs
crates/proxy/tests/: failure_modes.rs
crates/tls/: Cargo.toml
crates/tls/src/: config.rs  connector.rs  error.rs  lib.rs  profile.rs
examples/: cityline.rs
profiles/: brave-1.91.json  chrome-136-android.json  chrome-136-ios.json  chrome-136.json  chrome-148.json  chrome-149.json  duckduckgo-5.json  edge-149.json  firefox-128-android.json  firefox-128.json  firefox-139.json  firefox-151.json  opera-116.json  qq-15.json  safari-18.json  safari-26-ios.json  safari-26-ipad.json  safari-26.json  samsung-30.json  uc-16.json  vivaldi-7.json  yandex-25.json
src/: main.rs
