[package]
name = "rusthttp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight Rust HTTP client with Chrome TLS/HTTP2 fingerprint parity — bypasses Cloudflare, Akamai, DataDome"

[dependencies]
rusthttp-tls = { path = "../tls" }
rusthttp-h2 = { path = "../h2" }
rusthttp-proxy = { path = "../proxy" }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
brotli = "7"

[dev-dependencies]
serde_json = "1"
tokio = { workspace = true, features = ["full", "test-util"] }
