[package]
name = "rusthttp-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BoringSSL TLS layer with Chrome ClientHello fingerprint"

[dependencies]
boring = "4"
tokio-boring = "4"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
brotli = "7"
flate2 = "1"
